- classification learner now can have a property 'class.weights', supported by 'class.weights.param'. The latter
  indicates which of the parameters provides that class weights information to the learner.
- class weights integrated in the learner will be used as default for 'wcw.param' in 'makeWeightedClassesWrapper'
- listLearners with create = FALSE does not load packages anymore and is
  therefore faster and more reliable

- new functions
-- getDefaultMeasure
-- getTaskClassLevels
-- getPredictionTruth, getPredictionResponse
-- convertMLBenchObjToTask
-- getBMRLearners, getBMRMeasures, getBMRMeasureIds
-- makeMultilabelTask, makeMultilabelWrapper
-- generatePartialPredictionData, plotPartialPrediction, and plotPartialPredictionGGVIS
-- getClassWeightParam

- new measures
-- hamloss

- new learners
-- multilabel.rFerns

- new filters
-- permutation.importance

mlr_2.4:
- WrappedModel printer was slightly improved
- ReampleResult now stores the runtime it took to resample in a slot
- getTaskFormula / getTaskFormulaAsString have new argument 'explicit.features'
- getTaskData now has recodeY = "drop.levels" which drops empty factor levels
- option fix.factors in makeLearner was renamed to fix.factors.prediction for clarity
- showHyperPars was removed. getParamSet does exactly the same thing
- 'resample' and 'benchmark' got the argument keep.pred,
  setting it to FALSE allows to discard the prediction objects to save memory
- we had to slightly change how the mem usage is reported in tuning and feature selection
  See TuneControl and FeatSelControl where it is documented what is done now.
- tuneIrace: allows to set the precision / digits within irace (using the argument 'digits'
  in makeTuneControlIrace); default is maximum precision
- for plotting in general we try to introduce a "data layer", so the data can be generated independently
  of the plotting first, into well-defined objects; these can then be plotted with mlr or custom code;